[package]
name = "tca9554"
version = "0.1.1"
edition = "2024"
license = "MIT"
authors = ["Jacob Gelman <oss@jacobgelman.com>"]
repository = "https://github.com/ladvoc/tca9554-rs"
homepage = "https://github.com/ladvoc/tca9554-rs"
documentation = "https://docs.rs/tca9554"
description = "Driver for the TCA9554(A) I/O expander."
readme = "README.md"
keywords = ["embedded-hal-driver", "embassy", "async", "i2c"]
categories = ["no-std", "embedded", "hardware-support"]

[features]
defmt = ["dep:defmt"]
interrupt = ["dep:embassy-sync"]

[dependencies]
embedded-hal-async = { version = "1.0.0" }
defmt = { version = "1", optional = true }
embassy-sync = { version = "0.8.0", optional = true }
futures = { version = "0.3.32", default-features = false }
embedded-hal = "1.0.0"

[dev-dependencies]
embedded-hal-mock = { version = "0.11.1", features = ["embedded-hal-async"] }
pollster = { version = "0.4.0", features = ["macro"] }

[profile.release]
lto = true
